samples/_failures_safe/1761072813_2f02bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5f6bd6b.c: In function ‘main’:
./samples/SAFE/__tmp_a5f6bd6b.c:132:5: error: expected declaration or statement at end of input
  132 |     printf("2: Multiply\n");
      |     ^~~~~~
